--- a/scss/latestNews.scss
+++ b/scss/latestNews.scss
@@ -42,11 +42,4 @@
         align-items: center;
         justify-content: center;
     }
-
-    .carouselle_container {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
 }
